# ObjectTrackingDemo

./: .gitignore  CMakeLists.txt  README.md
include/: BYTETracker.h  appevent.h  appinit.h  cncnn.h  cserialport.h  ctoupcamera.h  cusbcamera.h  cwebsocket.h  dataType.h  mainwindow.h  mytask.h  utils.h  yolov8onnx.h
installer/packges/cn.edu.cqut.www/meta/: installscript.qs
old/: ctoupcamera.cpp  cusbcamera.cpp  cusbcamera.h
src/: BYTETracker.cpp  appevent.cpp  appinit.cpp  appinit.h  ccamera.cpp  cncnn.cpp  cserialport.cpp  ctoupcamera.cpp  ctoupcamera.h  cusbcamera.cpp  cwebsocket.cpp  cwebsocket.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mytask.cpp  utils.cpp  utils.h  yoloX.cpp  yolov8onnx.cpp  yolov8onnx.h
ui/: mainwindow.ui
